# libutc

./: AUTHORS  ChangeLog  NEWS  config.h.in  configure.ac  readme.txt  utc.c  utcmk.c
include/: Makefile.am  utc.h
lib/: Makefile.am  utc.c  utc_64.h  utc_arith.h  utc_priv.h  utc_time.h  utc_types.h  utcgbl.c  utcint.c  utcmk.c
